# cecs574-decentralized-edge-llm-energy-strategies

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  sanity_check.py
.streamlit/: config.toml
app/: __init__.py  dashboard.py  plots.py
core/: README.md  __init__.py  device.py  energy.py  main.py  markov.py  network.py  strategies.py
docs/: Team_7_Solar_Synapse_github.txt
experiments/: README.md  config.py  main.py  run_experiments.py
results/: exp1_energy_sweep.csv  exp2_arrival_sweep.csv  exp3_diurnal.csv  exp4_heterogeneous.csv
